# dspdavscp

./: .dockerignore  .gitignore  DSPDAVSCPAPI.yaml  README.md
.github/workflows/: publish.yaml
plugin/: .vscodeignore  CHANGELOG.md  README.md  package.json  tsconfig.json
plugin/src/: extension.ts  report.ts  topqueue.ts
server/: api.py  api_specification.txt  app.py  create_database.py  danalysis.py  db_handler.py  helper_function.py  pyproject.toml  records.db  requirements.txt
server-gen/: setup.py
server-gen/.openapi-generator/: FILES
server-gen/openapi_server/: __main__.py
server-gen/openapi_server/controllers/: default_controller.py
server-gen/openapi_server/models/: __init__.py  file_report.py  report.py
server-gen/openapi_server/openapi/: openapi.yaml
server-gen/openapi_server/test/: test_default_controller.py
server/docker/: Dockerfile  compose.debug.yaml  compose.deploy.yaml
server/src/: admin.py  analyze.py  api.py  db_handler.py  fixtures.py
server/static/css/: home.css
server/templates/: home.html
